# BRAMBLE

./: README.md  development_notebook.ipynb  environment.yml  pyproject.toml  sample_bramble.py  train.py
.github/workflows/: tests.yml
data/: SH_allometry_2023.csv
model/: BRAMBLE.py  fake_data_simulator.py
src/: bramble.py
tests/: test_init.py
